--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "build:gh-pages": "vite build --base=/Dandelion-Landing_Page/",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "preview:gh": "vite preview --base=/Dandelion-Landing_Page/",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "gh-pages": "^6.3.0",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
